--- a/arcms-admin/pom.xml
+++ b/arcms-admin/pom.xml
@@ -36,8 +36,8 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 		<dependency>
-            <groupId>com.acrms</groupId>
-            <artifactId>acrms-biz</artifactId>
+            <groupId>com.arcms</groupId>
+            <artifactId>arcms-biz</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <!-- Spring 3 dependencies -->
@@ -225,16 +225,6 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.10</version>
-        </dependency>
-        <dependency>
-            <groupId>json</groupId>
-            <artifactId>json</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>baidu</groupId>
-            <artifactId>ueditor</artifactId>
-            <version>1.1.1</version>
         </dependency>
     </dependencies>
 
