--- a/suniusoft-framework/suniusoft-pay/pom.xml
+++ b/suniusoft-framework/suniusoft-pay/pom.xml
@@ -35,11 +35,11 @@
             <artifactId>suniusoft-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>com.icard</groupId>
-            <artifactId>icard-biz</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.arcms</groupId>-->
+            <!--<artifactId>icard-biz</artifactId>-->
+            <!--<version>1.0.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
         <!-- Spring 3 dependencies -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -231,17 +231,6 @@
             <artifactId>commons-codec</artifactId>
             <version>1.10</version>
         </dependency>
-        <dependency>
-            <groupId>json</groupId>
-            <artifactId>json</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>baidu</groupId>
-            <artifactId>ueditor</artifactId>
-            <version>1.1.1</version>
-        </dependency>
-
     </dependencies>
 
     <build>
