--- a/arcms/src/main/profiles/beta/config.properties
+++ b/arcms/src/main/profiles/beta/config.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/arcms
-jdbc.username=root
-jdbc.password=sd123
+jdbc.url=jdbc:mysql://121.40.226.124:3306/arcms
+jdbc.username=arcms
+jdbc.password=arcms123
 
 loggingRoot=/arcms_admin/log
 loggingLevel=INFO
